--- a/index.html
+++ b/index.html
@@ -25,33 +25,21 @@
 <ul class="ddmenu">
    <li style="left: 1px; top: 5px"><a href="#">
    <img src="./img/Open-house.png" height="33" width="24"></a></li>
-   <li><a href="#">繝九Η繝ｼ繧ｹ</a>
-      <ul>
-         <li><a href="#">譁ｰ陬ｽ蜩・&raquo;</a>
-            <ul>
-               <li><a href="#">繝上・繝峨え繧ｧ繧｢</a></li>
-               <li><a href="#">繧ｽ繝輔ヨ繧ｦ繧ｧ繧｢</a></li>
-            </ul>
-         </li></li>
-         <li><a href="#">譁ｰ繧ｵ繝ｼ繝薙せ</a></li>
-         <li><a href="#">蠑顔､ｾ縺ｫ縺､縺・※</a></li>
-      </ul>
+   <li><a href="https://oh.openhouse-group.com/s-kodate/aichi/">Open House</a>
    </li>
-   <li><a href="#">陬ｽ蜩√・謚陦・/a>
+   <li><a href="#">Home</a>
       <ul>
-         <li><a href="#">繝上・繝峨え繧ｧ繧｢ &raquo;</a>
+         <li><a href="#">Tool</a>
             <ul>
-               <li><a href="#">豕穂ｺｺ蜷代￠</a></li>
-               <li><a href="#">蛟倶ｺｺ蜷代￠</a></li>
+               <li><a href="#">Searching for vacant houses</a></li>
+               <li><a href="#">inquiry,post</a></li>
             </ul>
          </li>
-         <li><a href="#">繧ｽ繝輔ヨ繧ｦ繧ｧ繧｢ &raquo;</a>
+         <li><a href="#">News</a>
             <ul>
-               <li><a href="#">for Windows</a></li>
-               <li><a href="#">for Mac</a></li>
-               <li><a href="#">for Android</a></li>
-               <li><a href="#">for iOS</a></li>
-               <li><a href="#">縺昴・莉・/a></li>
+               <li><a href="#">Latest News</a></li>
+               <li><a href="#">Archive</a></li>
+               <li><a href="#">post</a></li>
             </ul>
          </li>
          <li><a href="#">繧ｦ繧ｧ繝悶し繝ｼ繝薙せ</a></li>
