--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
       <title>20年後の家族が幸せになる街づくりと住まい</title>
       <link rel="stylesheet" href="style.css">
       <script src="https://code.jquery.com/jquery-3.2.1.min.js" type="text/javascript"></script>
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
    </head>
    <script type="text/javascript">
    $(function(){
@@ -23,29 +25,29 @@
       <ul class="ddmenu">
          <li><a href="https://oh.openhouse-group.com/">Open House ホーム</a></li>
    <li><a href="./index.html">ホーム</a></li>
-   <li><a href="./tool.html">ツール</a>
+   <li><a href="./tool.html"><i class="fas fa-wrench"></i>ツール</a>
       <ul>
-         <li><a href="./house syumire-ta-.html">土地・家シミュレーター</a>
-         <li><a href="#">空き家検索 &raquo;</a>
+         <li><a href="./house simulator.html"><i class="far fa-window-maximize"></i>土地・家シミュレーター</a>
+         <li><a href="#"><i class="fas fa-search"></i>空き家検索 &raquo;</a>
             <ul>
-               <li><a href="#">閲覧</a></li>
-               <li><a href="#">投稿</a></li>
-               <li><a href="#">報告</a></li>
+               <li><a href="#"><i class="far fa-newspaper"></i>閲覧</a></li>
+               <li><a href="#"><i class="fas fa-comment-dots"></i></i>投稿</a></li>
+               <li><a href="#"><i class="fas fa-comment"></i>報告</a></li>
             </ul>
          </li></li>
       </ul>
    </li>
          <li>
-            <a href="#">ヘルプ</a>
+            <a href="#"><i class="far fa-life-ring"></i>ヘルプ</a>
             <ul>
-               <li><a href="#">このサイトについて</a></li>
-               <li><a href="#">何か提案がある人は</a></li>
-               <li><a href="#">ヘルプ</a>
+               <li><a href="#"><i class="fas fa-question"></i>このサイトについて</a></li>
+               <li><a href="#"><i class="fab fa-speakap"></i>何か提案がある人は</a></li>
+               <li><a href="#"><i class="far fa-life-ring"></i>ヘルプ</a>
             </li>
             </ul>
          </li>
          <li>
-            <a href="#">Language</a>
+            <a href="#"><i class="fas fa-globe"></i>Language</a>
             <ul>
                <li><a href="#">日本語</a></li>
                <li><a href="#">English</a></li>
@@ -57,16 +59,107 @@
 </ul>
 <div class="notedesign">
    <p class="notetitle">
-      <span class="date">日付</span>
-      ■タイトル
+      <span class="date"></span>
+      ■ようこそいらっしゃいませ
    </p>
    <p>
-      本文いろいろ
+      こんにちは。このサイトは空き家情報を掲載、投稿ができます。ほかにも、土地・家シミュレーターなどを掲載しております。どうぞ見ていってください。
+   </p>
+      <p class="notetitle">
+      <span class="date">2025年10月4日20時52分　更新</span>
+      ■近年の更新内容
    </p>
    <p>
-      本文いろいろ
+      <b><i class="far fa-window-maximize"></i>サイト更新の更新内容(直近5件)</b>
+   </p>
+   <p>2025年10月4日　サイトつくりはじめ</p>
+   <p>2025年10月4日　工事中(現在進行形)</p>
+   <p>2025年10月4日　㊗️ドロップダウンメニュー完成</p>
+   <p>2025年10月4日　ツールとか増やすつもり</p>
+   <p>2025年10月4日　フッター完成</p>
+   <p><b><i class="fas fa-wrench"></i>ツール更新の更新内容(直近5件)</b></p>
+   <p>2025年10月4日　土地・家シミュレーター追加</p>
+   <p>2025年10月4日　空き家情報の掲載・投稿・報告機能の追加</p>
+   <p class="notetitle">
+      <span class="date"></span>
+      ■空き家情報の掲載、投稿、報告機能について
+   </p>
+   <p>
+      空き家情報を掲載・投稿・報告する機能を設けております。
+   </p>
+   <p>
+      しかしながら、荒らす人が出てくるのが現状です。
+   </p>
+   <p>
+      なので、対策として報告機能を設けたり、運営側が自動で削除することがあります。
+   </p>
+   <p>
+      予めご承知おきください…
+   </p>
+   <p class="notetitle">
+      <span class="date"></span>
+      ■試験中
+   </p>
+   <p>
+      ただいま試験中なので、リンクが切れていたり、動かない場合がありますが、予めご承知おきくださいm（_ _）m
+   </p>
+   <p>
+      また、スペルミス等あると思います。
    </p>
 </div>
-Ⓒopylight 2025 Open House. All light reserved.
+  <footer class="footer">
+    <div class="footer-top">
+      <div class="footer-column">
+        <h3>Home</h3>
+        <ul>
+          <li><a href="#">Open House ホーム</a></li>
+          <li><a href="#">ホーム</a></li>
+        </ul>
+      </div>
+
+      <div class="footer-column">
+        <h3>ツール</h3>
+        <ul>
+          <li><a href="#">土地・家シミュレーター</a></li>
+          <li><h3>空き家探し</h3></li>
+          <li><a href="#">閲覧</a></li>
+          <li><a href="#">投稿</a></li>
+          <li><a href="#">報告</a></li>
+        </ul>
+      </div>
+
+      <div class="footer-column">
+        <h3>ヘルプ</h3>
+        <ul>
+          <li><a href="#">このサイトについて</a></li>
+          <li><a href="#">何か提案がある人は</a></li>
+          <li><a href="#">ヘルプ</a></li>
+        </ul>
+      </div>
+
+      <div class="footer-column">
+        <h3>Language</h3>
+        <ul>
+          <li><a href="#">日本語</a></li>
+          <li><a href="#">English</a></li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="footer-bottom">
+      <div class="logo">OPEN HOUSE</div>
+      <p>Copyright (c) 2025 Open House Co.,Ltd. All rights reserved.</p>
+      <ul class="footer-links">
+        <li><a href="#">サイトマップ</a></li>
+        <li><a href="#">個人情報保護方針</a></li>
+        <li><a href="#">ソーシャルメディアガイドライン</a></li>
+        <li><a href="#">よくいただく質問</a></li>
+        <li><a href="#">お問い合わせ</a></li>
+      </ul>
+    </div>
+  </footer>
+<p id="topbutton">
+   <a href="#top" onclick="$('html,body').animate({ scrollTop: 0 }); return false;">▲TOPへ戻る</a>
+</p>
    </body>
 </html>
